using System;

public class Persistencia
{
    // Método para guardar dados (Esqueleto)
    public void GuardarDados()
    {
        Console.WriteLine("A guardar dados em ficheiro... (Simulação)");
    }

    // Método para carregar dados (Esqueleto)
    public void CarregarDados()
    {
        Console.WriteLine("A carregar dados do sistema... (Simulação)");
    }
}